# mcp-opendart-server

./: .gcloudignore  .gitignore  Dockerfile  README.md  copy_packages.sh  opendart_mcp_blog.md  opendarts.py  pyproject.toml  settings.json
docs/: claude_opendart_mcp.md
examples/20251114002447_ifrs/: entity00126380_2025-09-30.xbrl  entity00126380_2025-09-30_cal.xml  entity00126380_2025-09-30_def.xml  entity00126380_2025-09-30_lab-en.xml
tests/: tests_yahoo.py
tests/20250814003156_ifrs/: entity00126380_2025-06-30.xbrl  entity00126380_2025-06-30.xsd  entity00126380_2025-06-30_cal.xml  entity00126380_2025-06-30_def.xml  entity00126380_2025-06-30_lab-en.xml  entity00126380_2025-06-30_lab-ko.xml  entity00126380_2025-06-30_pre.xml
tests/20251114002447_ifrs/: entity00126380_2025-09-30.xsd  entity00126380_2025-09-30_lab-ko.xml  entity00126380_2025-09-30_pre.xml
